@@ -1,6 +1,6 @@
 Build.PL
 Changes
-lib/DFA/StateMachine.pm
+lib/DFA/Rules.pm
 Makefile.PL
 MANIFEST			This list of files
 README
