@@ -1,5 +1,5 @@
-DFA/StateMachine version 0.02
-=============================
+DFA/Rules version 0.02
+======================
 
 
 
